@@ -61,10 +61,18 @@ struct _hsstruct
 	HStruct *hs;
 	int	port;
 };
-
-
 static iFP			xVS_add = NULL;
 static ConfigItem_blackhole	*blackh_conf = NULL;
+
+static Mod_SymbolDepTable mod_symdep[] = 
+{
+	MOD_Dep(VS_Add, xVS_add, "src/modules/scan.so"),
+	MOD_Dep(HSlock, xHSlock, "src/modules/scan.so"),
+	MOD_Dep(VSlock, xVSlock, "src/modules/scan.so"),
+	MOD_Dep(blackhole_conf, blackh_conf, "src/modules/scan.so"),
+	{NULL,NULL, NULL}
+};
+
 void	scan_http_scan(HStruct *h);
 void	scan_http_scan_port(HSStruct *z);
 #ifndef DYNAMIC_LINKING
@@ -77,13 +85,7 @@ ModuleHeader Mod_Header
 	"$Id$", /* Version */
 	"scanning API: http proxies", /* Short description of module */
 	"3.2-b5",
-	{
-		MOD_Dep(VS_Add, xVS_add, "src/modules/scan.so"),
-		MOD_Dep(HSlock, xHSlock, "src/modules/scan.so"),
-		MOD_Dep(VSlock, xVSlock, "src/modules/scan.so"),
-		MOD_Dep(blackhole_conf, blackh_conf, "src/modules/scan.so"),
-		{NULL,NULL}
-	}
+	mod_symdep
     };
 
 /*
